...
    <string name="snackbar_meal_deleted">Meal deleted</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="appearance">Appearance</string>
    <string name="ok">OK</string>
    <string name="system">System</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="follow_system">Follow System</string>
    <string name="number_must_be_valid">Number must be valid</string>
    <string name="age_must_be_valid">Age must be valid</string>
    <string name="height_must_be_valid">Height must be valid</string>
    <string name="could_not_find_any_more_matching_foods">Could not find any more matching foods.</string>
...
